kubernetes/services/home-assistant.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8123
  selector:
    app: home-assistant

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: default
spec:
  tls:
    - hosts:
        - ha.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: ha.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: default
  labels:
    app: home-assistant
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:stable
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /storage/home-assistant/config
