kubernetes/services/lldap.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 17170
    - protocol: TCP
      name: ldap
      port: 389
      targetPort: 3890
  selector:
    app: lldap

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: default
spec:
  tls:
    - hosts:
        - lldap.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: lldap.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: default
  labels:
    app: lldap
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: app
          image: lldap/lldap:stable
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 17170
            - name: ldap
              containerPort: 3890
